[tool.poetry]
name = "pythonperf"
version = "0.1.0"
description = "Python Performance Testing"
authors = ["Ajay P Sakthikumar <codewizard001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
